On peut voter + script ajax pour l'update

--- a/ForumDImage/ForumDImage/Views/Inscription/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/Inscription/Index.cshtml
@@ -16,13 +16,14 @@
         Hello
         @using (Html.BeginForm())
         {
+            Html.ValidationSummary(false);
             <fieldset>
                 <legend>Ajouter un usager</legend>
 
                 <div>
                     @Html.LabelFor(model => model.NomUtilisateur)
-                    @Html.TextBoxFor(model => model.NomUtilisateur)
-                    @Html.ValidationMessageFor(model => model.NomUtilisateur)*
+                    @Html.TextBoxFor(model => model.NomUtilisateur)*
+                    @Html.ValidationMessageFor(model => model.NomUtilisateur)
                 </div>
 
                 <div>
