--- a/ForumDImage/ForumDImage/Views/Login/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/Login/Index.cshtml
@@ -28,7 +28,7 @@
                     @Html.LabelFor(model => model.MotDePasse)
                     @Html.TextBoxFor(model => model.MotDePasse)
                 </div>
-                @Html.ActionLink("Inscription", "~/Inscription/Index");
+                @Html.ActionLink("Inscription", "Index", "Inscription");
                 <br />
                 <input type="submit" value="Connection" />
             </fieldset>
