--- a/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
@@ -1,6 +1,6 @@
-﻿
-@{
+﻿@{
     Layout = null;
+
 }
 
 <!DOCTYPE html>
@@ -9,19 +9,62 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>MainPage</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+    <script type="text/javascript">
+        function ChargeNombreVotes(photoID) {
+            $.ajax({
+                url: '@Url.Action("getNbVotes")',
+                type: 'POST',
+                dataType: 'html',
+                data: {"photoID" : photoID }, 
+                success: function (result) {
+                    $('#' + photoID).html(result);
+                },
+                error: function() { alert ('erreur de la requete ajax')}
+            });
+        }
+    </script>
 </head>
 <body>
     <h1>That main page</h1>
+    @{ForumDImage.Models.Dal dal = new ForumDImage.Models.Dal();}
 
     @foreach (ForumDImage.Models.Photo photo in ViewBag.Photos)
     {
         var base64 = Convert.ToBase64String(photo.Image);
         var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-        
-        <img src="@imgSrc" />
+        <br />
+        <img src="@imgSrc" style="width:150px; height:150px" />
+        <br />
         <label>Auteur: @(photo.Utilisateur.NomComplet == null ? photo.Utilisateur.NomUtilisateur : photo.Utilisateur.NomComplet)</label>
+        <br />
         <label>Date de publication: @photo.Date</label>
+        <br />
         <label>Commentaire: @photo.Commentaire</label>
+        <br />
+        <label>La photo a été aimée <label id="@photo.Id">
+            <script type="text/javascript">
+                ChargeNombreVotes(@photo.Id); 
+                $(function () { window.setInterval("ChargeNombreVotes(@photo.Id)", 10000) });
+            </script>
+                    </label> fois</label>
+        <br />
+        if (!dal.UtilisateurADejaVote(photo.Id.ToString(), HttpContext.Current.User.Identity.Name))
+        {
+            using (Html.BeginForm("Index", "ZoneClients", FormMethod.Post))
+            {
+                @Html.Hidden("photoID", photo.Id);
+                <input type="submit" value="J'aime" />
+            }
+
+        }
+        else
+        {
+            <label>Vous avez déjà voté</label>
+        }
     }
+    
+
 </body>
 </html>
