--- a/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
@@ -17,21 +17,30 @@
                 url: '@Url.Action("getNbVotes")',
                 type: 'POST',
                 dataType: 'html',
-                data: {"photoID" : photoID }, 
+                data: { "photoID": photoID },
                 success: function (result) {
                     $('#' + photoID).html(result);
                 },
-                error: function() { alert ('erreur de la requete ajax')}
+                error: function () { alert('erreur de la requete ajax') }
             });
         }
     </script>
 </head>
 <body>
-    <h1>That main page</h1>
+    <h1>Page @ViewBag.page</h1>
     @{ForumDImage.Models.Dal dal = new ForumDImage.Models.Dal();}
 
     @foreach (ForumDImage.Models.Photo photo in ViewBag.Photos)
     {
+        if (photo.Utilisateur.Id.ToString() == HttpContext.Current.User.Identity.Name)
+        {
+            using (Html.BeginForm("SupprimerPhoto", "ZoneClients", FormMethod.Post, new { onsubmit = "return confirm('Voulez-vous vraiment supprimer cette photo?')" } ))
+            {
+                @Html.Hidden("photoId", photo.Id);
+                <input type="submit" value="Supprimer" />
+            }
+        }
+
         var base64 = Convert.ToBase64String(photo.Image);
         var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
         <br />
@@ -43,19 +52,21 @@
         <br />
         <label>Commentaire: @photo.Commentaire</label>
         <br />
-        <label>La photo a été aimée <label id="@photo.Id">
-            <script type="text/javascript">
-                ChargeNombreVotes(@photo.Id); 
-                $(function () { window.setInterval("ChargeNombreVotes(@photo.Id)", 10000) });
-            </script>
-                    </label> fois</label>
+        <label>
+            La photo a été aimée <label id="@photo.Id">
+                <script type="text/javascript">
+                    ChargeNombreVotes(@photo.Id);
+                    $(function () { window.setInterval("ChargeNombreVotes(@photo.Id)", 10000) });
+                </script>
+            </label> fois
+        </label>
         <br />
         if (!dal.UtilisateurADejaVote(photo.Id.ToString(), HttpContext.Current.User.Identity.Name))
         {
             using (Html.BeginForm("Index", "ZoneClients", FormMethod.Post))
             {
                 @Html.Hidden("photoID", photo.Id);
-                <input type="submit" value="J'aime" />
+        <input type="submit" value="J'aime" />
             }
 
         }
@@ -63,8 +74,20 @@
         {
             <label>Vous avez déjà voté</label>
         }
+        <hr />
     }
-    
+
+    @{ 
+        if (ViewBag.HasPrevious)
+        {
+            @Html.ActionLink("Page précédente", "Index", new { _page = ViewBag.page - 1 });
+        }
+            <br />
+        if (ViewBag.HasNext)
+        {
+            @Html.ActionLink("Page suivante", "Index", new { _page = ViewBag.page + 1 });
+        }
+    }
 
 </body>
 </html>
