Régler le problème de doublon d'usernames

--- a/ForumDImage/ForumDImage/Views/Inscription/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/Inscription/Index.cshtml
@@ -58,6 +58,8 @@
                 *Obligatoire
                 <br />
                 <input type="submit" value="Inscription" />
+                <br />
+                @ViewBag.Message
             </fieldset>
         }
     </div>
