--- a/ForumDImage/ForumDImage/Views/Inscription/Success.cshtml
+++ b/ForumDImage/ForumDImage/Views/Inscription/Success.cshtml
@@ -9,9 +9,25 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Success</title>
+    <link href="MasterCSS.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div> 
+    <div class="HeaderDiv">
+        <img src="Le-Yung-LeL.png" alt="Le Yung Lel Logo" class="MainLogo" /></a>
+        <br>
+        <br>
+        <table class="MainTable">
+            <tr>
+                <td>@Html.ActionLink("Index", "Index", "ZoneClients")</td>
+                <td>@Html.ActionLink("Publier une Photo", "PublierPhoto", "ZoneClients")</td>
+                <td>@Html.ActionLink("Modifier le Compte", "ModifierUtilisateur", "ZoneClients")</td>
+                <td>@Html.ActionLink("Login", "Index", "Login")</td>
+                <td>@Html.ActionLink("Inscription", "Index", "Inscription")</td>
+            </tr>
+        </table>
+        <hr>
+    </div>
+    <div class="MainDiv"> 
         Bravo, tu as bien été inscrit
     </div>
 </body>
