--- a/ForumDImage/ForumDImage/Views/Login/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/Login/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
     @model ForumDImage.Models.Utilisateur
 }
@@ -10,29 +9,44 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <link href="MasterCSS.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div> 
-        Hello
+    <div class="HeaderDiv">
+        <img src="Le-Yung-LeL.png" alt="Le Yung Lel Logo" class="MainLogo" /></a>
+        <br>
+        <br>
+        <table class="MainTable">
+            <tr>
+                <td>@Html.ActionLink("Index", "Index", "ZoneClients")</td>
+                <td>@Html.ActionLink("Publier une Photo", "PublierPhoto", "ZoneClients")</td>
+                <td>@Html.ActionLink("Modifier le Compte", "ModifierUtilisateur", "ZoneClients")</td>
+                <td>@Html.ActionLink("Login", "Index", "Login")</td>
+                <td>@Html.ActionLink("Inscription", "Index", "Inscription")</td>
+            </tr>
+        </table>
+        <hr>
+    </div>
+    <div class="MainDiv">
         @using (Html.BeginForm())
         {
-            <fieldset>
-                <legend>Se connecter</legend>
-
-                <div>
-                    @Html.LabelFor(model => model.NomUtilisateur)
-                    @Html.TextBoxFor(model => model.NomUtilisateur)
-                </div>
-
-                <div>
-                    @Html.LabelFor(model => model.MotDePasse)
-                    @Html.TextBoxFor(model => model.MotDePasse)
-                </div>
-                @Html.ActionLink("Inscription", "Index", "Inscription")
-                <br />
-                <input type="submit" value="Connection" />
-            </fieldset>
-            <label style="color:red">@ViewBag.Message</label>
+        <fieldset>
+            <legend>Se connecter</legend>
+            <table>
+                <tr>
+                    <td>@Html.LabelFor(model => model.NomUtilisateur)</td>
+                    <td>@Html.TextBoxFor(model => model.NomUtilisateur)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(model => model.MotDePasse)</td>
+                    <td>@Html.TextBoxFor(model => model.MotDePasse)</td>
+                </tr>
+            </table>
+            
+            <br />
+            <input type="submit" value="Connection" />
+        </fieldset>
+        <label style="color:red">@ViewBag.Message</label>
         }
     </div>
 </body>
