--- a/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>MainPage</title>
+    <link href="MasterCSS.css" rel="stylesheet" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     <script type="text/javascript">
@@ -26,67 +27,85 @@
     </script>
 </head>
 <body>
+    <div class="HeaderDiv">
+        <img src="../Le-Yung-LeL.png" alt="Le Yung Lel Logo" class="MainLogo" /></a>
+        <br>
+        <br>
+        <table class="MainTable">
+            <tr>
+                <td>@Html.ActionLink("Index", "Index", "ZoneClients")</td>
+                <td>@Html.ActionLink("Publier une Photo", "PublierPhoto", "ZoneClients")</td>
+                <td>@Html.ActionLink("Modifier le Compte", "ModifierUtilisateur", "ZoneClients")</td>
+                <td>@Html.ActionLink("Login", "Index", "Login")</td>
+                <td>@Html.ActionLink("Inscription", "Index", "Inscription")</td>
+            </tr>
+        </table>
+        <hr>
+    </div>
+<div class="MainDiv">
     <h1>Page @ViewBag.page</h1>
+<hr />
     @{ForumDImage.Models.Dal dal = new ForumDImage.Models.Dal();}
 
     @foreach (ForumDImage.Models.Photo photo in ViewBag.Photos)
     {
-        if (photo.Utilisateur.Id.ToString() == HttpContext.Current.User.Identity.Name)
-        {
-            using (Html.BeginForm("SupprimerPhoto", "ZoneClients", FormMethod.Post, new { onsubmit = "return confirm('Voulez-vous vraiment supprimer cette photo?')" } ))
-            {
-                @Html.Hidden("photoId", photo.Id);
-                <input type="submit" value="Supprimer" />
-            }
-        }
-
-        var base64 = Convert.ToBase64String(photo.Image);
-        var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-        <br />
-        <img src="@imgSrc" style="width:150px; height:150px" />
-        <br />
-        <label>Auteur: @(photo.Utilisateur.NomComplet == null ? photo.Utilisateur.NomUtilisateur : photo.Utilisateur.NomComplet)</label>
-        <br />
-        <label>Date de publication: @photo.Date</label>
-        <br />
-        <label>Commentaire: @photo.Commentaire</label>
-        <br />
-        <label>
-            La photo a été aimée <label id="@photo.Id">
-                <script type="text/javascript">
-                    ChargeNombreVotes(@photo.Id);
-                    $(function () { window.setInterval("ChargeNombreVotes(@photo.Id)", 10000) });
-                </script>
-            </label> fois
-        </label>
-        <br />
-        if (!dal.UtilisateurADejaVote(photo.Id.ToString(), HttpContext.Current.User.Identity.Name))
-        {
-            using (Html.BeginForm("Index", "ZoneClients", FormMethod.Post))
-            {
-                @Html.Hidden("photoID", photo.Id);
-                <input type="submit" value="J'aime" />
-            }
-
-        }
-        else
-        {
-            <label>Vous avez déjà voté</label>
-        }
-        <hr />
+    if (photo.Utilisateur.Id.ToString() == HttpContext.Current.User.Identity.Name)
+    {
+    using (Html.BeginForm("SupprimerPhoto", "ZoneClients", FormMethod.Post, new { onsubmit = "return confirm('Voulez-vous vraiment supprimer cette photo?')" } ))
+    {
+    @Html.Hidden("photoId", photo.Id);
+    <input type="submit" value="Supprimer" />
+    }
     }
 
-    @{ 
-        if (ViewBag.HasPreviousPage)
-        {
-            @Html.ActionLink("Page précédente", "Index", new { _page = ViewBag.page - 1 });
-        }
-            <br />
-        if (ViewBag.HasNextPage)
-        {
-            @Html.ActionLink("Page suivante", "Index", new { _page = ViewBag.page + 1 });
-        }
+    var base64 = Convert.ToBase64String(photo.Image);
+    var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+    <br />
+    <img src="@imgSrc" style="width:150px; height:150px" />
+    <br />
+    <label>Auteur: @(photo.Utilisateur.NomComplet == null ? photo.Utilisateur.NomUtilisateur : photo.Utilisateur.NomComplet)</label>
+    <br />
+    <label>Date de publication: @photo.Date</label>
+    <br />
+    <label>Commentaire: @photo.Commentaire</label>
+    <br />
+    <label>
+        La photo a été aimée <label id="@photo.Id">
+            <script type="text/javascript">
+                ChargeNombreVotes(@photo.Id);
+                $(function () { window.setInterval("ChargeNombreVotes(@photo.Id)", 10000) });
+            </script>
+        </label> fois
+    </label>
+    <br />
+    if (!dal.UtilisateurADejaVote(photo.Id.ToString(), HttpContext.Current.User.Identity.Name))
+    {
+    using (Html.BeginForm("Index", "ZoneClients", FormMethod.Post))
+    {
+    @Html.Hidden("photoID", photo.Id);
+    <input type="submit" value="J'aime" />
     }
+
+    }
+    else
+    {
+    <label>Vous avez déjà voté</label>
+    }
+    <hr />
+    }
+
+    @{
+    if (ViewBag.HasPreviousPage)
+    {
+    @Html.ActionLink("Page précédente", "Index", new { _page = ViewBag.page - 1 });
+    }
+    <br />
+    if (ViewBag.HasNextPage)
+    {
+    @Html.ActionLink("Page suivante", "Index", new { _page = ViewBag.page + 1 });
+    }
+    }
+</div>
 
 </body>
 </html>
