--- a/ForumDImage/ForumDImage/Views/ZoneClients/ModifierUtilisateur.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/ModifierUtilisateur.cshtml
@@ -10,76 +10,64 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>ModifierLesInfos</title>
+    <link href="../MasterCSS.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        
-        <div class="form-horizontal">
-            <h4>Utilisateur</h4>
-            <hr />
+    <div class="HeaderDiv">
+        <img src="../Le-Yung-LeL.png" alt="Le Yung Lel Logo" class="MainLogo" /></a>
+        <br>
+        <br>
+        <table class="MainTable">
+            <tr>
+                <td>@Html.ActionLink("Index", "Index", "ZoneClients")</td>
+                <td>@Html.ActionLink("Publier une Photo", "PublierPhoto", "ZoneClients")</td>
+                <td>@Html.ActionLink("Modifier le Compte", "ModifierUtilisateur", "ZoneClients")</td>
+                <td>@Html.ActionLink("Login", "Index", "Login")</td>
+                <td>@Html.ActionLink("Inscription", "Index", "Inscription")</td>
+            </tr>
+        </table>
+        <hr>
+    </div>
+    <div class="MainDiv">
+        <fieldset>
+            <legend>Modification du Compte Utilisateur</legend>
             @Html.ValidationSummary(true)
             @Html.Hidden("Id", HttpContext.Current.User.Identity.Name)
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.NomUtilisateur, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.NomUtilisateur)
-                    @Html.ValidationMessageFor(model => model.NomUtilisateur)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.MotDePasse, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.MotDePasse)
-                    @Html.ValidationMessageFor(model => model.MotDePasse)
-                </div>
-            </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.ConfirmMotDePasse, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ConfirmMotDePasse)
-                    @Html.ValidationMessageFor(model => model.ConfirmMotDePasse)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.NomComplet, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.NomComplet)
-                    @Html.ValidationMessageFor(model => model.NomComplet)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Email)
-                    @Html.ValidationMessageFor(model => model.Email)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ConfirmEmail, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ConfirmEmail)
-                    @Html.ValidationMessageFor(model => model.ConfirmEmail)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
+            <table>
+                <tr>
+                    <td>@Html.LabelFor(model => model.NomUtilisateur, new { @class = "control-label col-md-2" })</td>
+                    <td>@Html.EditorFor(model => model.NomUtilisateur)</td>
+                    <td>@Html.ValidationMessageFor(model => model.NomUtilisateur)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(model => model.MotDePasse, new { @class = "control-label col-md-2" })</td>
+                    <td>@Html.EditorFor(model => model.MotDePasse)</td>
+                    <td>@Html.ValidationMessageFor(model => model.MotDePasse)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(model => model.ConfirmMotDePasse, new { @class = "control-label col-md-2" })</td>
+                    <td>@Html.EditorFor(model => model.ConfirmMotDePasse)</td>
+                    <td>@Html.ValidationMessageFor(model => model.ConfirmMotDePasse)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(model => model.NomComplet, new { @class = "control-label col-md-2" })</td>
+                    <td>@Html.EditorFor(model => model.NomComplet)</td>
+                    <td>@Html.ValidationMessageFor(model => model.NomComplet)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })</td>
+                    <td>@Html.EditorFor(model => model.Email)</td>
+                    <td>@Html.ValidationMessageFor(model => model.Email)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(model => model.ConfirmEmail, new { @class = "control-label col-md-2" })</td>
+                    <td>@Html.EditorFor(model => model.ConfirmEmail)</td>
+                    <td>@Html.ValidationMessageFor(model => model.ConfirmEmail)</td>
+                </tr>
+            </table>
+            <input type="submit" value="Save" class="btn btn-default" />
     </div>
+    </fieldset>
 </body>
 </html>
