--- a/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
@@ -54,6 +54,7 @@
     using (Html.BeginForm("SupprimerPhoto", "ZoneClients", FormMethod.Post, new { onsubmit = "return confirm('Voulez-vous vraiment supprimer cette photo?')" } ))
     {
     @Html.Hidden("photoId", photo.Id);
+    @Html.Hidden("_page", (int)ViewBag.page);
     <input type="submit" value="Supprimer" />
     }
     }
@@ -61,13 +62,15 @@
     var base64 = Convert.ToBase64String(photo.Image);
     var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
     <br />
+    <label>Titre: @photo.Titre</label>
+    <br />
     <img src="@imgSrc" style="width:150px; height:150px" />
     <br />
     <label>Auteur: @(photo.Utilisateur.NomComplet == null ? photo.Utilisateur.NomUtilisateur : photo.Utilisateur.NomComplet)</label>
     <br />
     <label>Date de publication: @photo.Date</label>
     <br />
-    <label>Commentaire: @photo.Commentaire</label>
+    <label>Commentaire: @(photo.Commentaire == "" ? "Aucun" : photo.Commentaire)</label>
     <br />
     <label>
         La photo a été aimée <label id="@photo.Id">
@@ -83,6 +86,7 @@
     using (Html.BeginForm("Index", "ZoneClients", FormMethod.Post))
     {
     @Html.Hidden("photoID", photo.Id);
+    @Html.Hidden("_page", (int)ViewBag.page);
     <input type="submit" value="J'aime" />
     }
 
