--- a/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/Index.cshtml
@@ -1,15 +1,8 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>MainPage</title>
-    <link href="MasterCSS.css" rel="stylesheet" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     <script type="text/javascript">
@@ -25,24 +18,6 @@
             });
         }
     </script>
-</head>
-<body>
-    <div class="HeaderDiv">
-        <img src="../Le-Yung-LeL.png" alt="Le Yung Lel Logo" class="MainLogo" /></a>
-        <br>
-        <br>
-        <table class="MainTable">
-            <tr>
-                <td>@Html.ActionLink("Index", "Index", "ZoneClients")</td>
-                <td>@Html.ActionLink("Publier une Photo", "PublierPhoto", "ZoneClients")</td>
-                <td>@Html.ActionLink("Modifier le Compte", "ModifierUtilisateur", "ZoneClients")</td>
-                <td>@Html.ActionLink("Login", "Index", "Login")</td>
-                <td>@Html.ActionLink("Inscription", "Index", "Inscription")</td>
-            </tr>
-        </table>
-        <hr>
-    </div>
-<div class="MainDiv">
     <h1>Page @ViewBag.page</h1>
 <hr />
     @{ForumDImage.Models.Dal dal = new ForumDImage.Models.Dal();}
@@ -109,7 +84,3 @@
     @Html.ActionLink("Page suivante", "Index", new { _page = ViewBag.page + 1 });
     }
     }
-</div>
-
-</body>
-</html>
