--- a/ForumDImage/ForumDImage/Views/Shared/_Layout.cshtml
+++ b/ForumDImage/ForumDImage/Views/Shared/_Layout.cshtml
@@ -10,12 +10,12 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <style>
         body {
-            padding-top: 30px;
+            padding-top: 50px;
         }
     </style>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="margin:auto">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -23,26 +23,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               
+                @if (HttpContext.Current.User.Identity.IsAuthenticated)
+                {
+                    @Html.ActionLink("Accueil", "Index", "ZoneClients", null, new { @class = "navbar-brand" })
+                }
+                else
+                {
+                    @Html.ActionLink("Accueil", "Index", "Login", null, new { @class = "navbar-brand" })
+                }
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @if (HttpContext.Current.User.Identity.IsAuthenticated)
                     {
-                    <li>@Html.ActionLink("Consulter les photos", "Inndex", "ZoneClients")</li>
-                    <li>@Html.ActionLink("Publier une photo", "PublierPhoto", "ZoneClients")</li>
-                    <li>@Html.ActionLink("Modifier mon compte", "ModifierUtilisateur", "ZoneClients")</li>
+                        <li>@Html.ActionLink("Publier une photo", "PublierPhoto", "ZoneClients")</li>
+                        <li>@Html.ActionLink("Modifier mon compte", "ModifierUtilisateur", "ZoneClients")</li>
+                        <li>@Html.ActionLink("Déconnection", "Deconnection", "Login")</li>
                     }
                     else
                     {
-                        <li>@Html.ActionLink("Login", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Inscription", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Inscription", "Index", "Inscription")</li>
                     }
                 </ul>
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="jumbotron" style="margin-top:auto; width:100%; height:10%; background:url(le-yung-lel.png) no-repeat center; background-size:contain">
+    </div>
+    <div class="container body-content" style="background-color:red">
         @RenderBody()
         <hr />
         <footer>
