--- a/ForumDImage/ForumDImage/Views/ZoneClients/ModifierUtilisateur.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/ModifierUtilisateur.cshtml
@@ -1,73 +1,48 @@
 ﻿@model ForumDImage.ViewModels.UserValidationModel
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+@using (Html.BeginForm("ModifierUtilisateur", "ZoneClients", FormMethod.Post))
+{
+    <fieldset>
+        <legend>Modification du Compte Utilisateur</legend>
+        @Html.ValidationSummary(true)
+        @Html.Hidden("Id", HttpContext.Current.User.Identity.Name)
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>ModifierLesInfos</title>
-    <link href="../MasterCSS.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-    <div class="HeaderDiv">
-        <img src="../Le-Yung-LeL.png" alt="Le Yung Lel Logo" class="MainLogo" /></a>
-        <br>
-        <br>
-        <table class="MainTable">
+        <table>
             <tr>
-                <td>@Html.ActionLink("Index", "Index", "ZoneClients")</td>
-                <td>@Html.ActionLink("Publier une Photo", "PublierPhoto", "ZoneClients")</td>
-                <td>@Html.ActionLink("Modifier le Compte", "ModifierUtilisateur", "ZoneClients")</td>
-                <td>@Html.ActionLink("Login", "Index", "Login")</td>
-                <td>@Html.ActionLink("Inscription", "Index", "Inscription")</td>
+                <td>@Html.LabelFor(model => model.NomUtilisateur, new { @class = "control-label col-md-2" })</td>
+                <td>@Html.EditorFor(model => model.NomUtilisateur)</td>
+                <td>@Html.ValidationMessageFor(model => model.NomUtilisateur)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(model => model.MotDePasse, new { @class = "control-label col-md-2" })</td>
+                <td>@Html.EditorFor(model => model.MotDePasse)</td>
+                <td>@Html.ValidationMessageFor(model => model.MotDePasse)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(model => model.ConfirmMotDePasse, new { @class = "control-label col-md-2" })</td>
+                <td>@Html.EditorFor(model => model.ConfirmMotDePasse)</td>
+                <td>@Html.ValidationMessageFor(model => model.ConfirmMotDePasse)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(model => model.NomComplet, new { @class = "control-label col-md-2" })</td>
+                <td>@Html.EditorFor(model => model.NomComplet)</td>
+                <td>@Html.ValidationMessageFor(model => model.NomComplet)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })</td>
+                <td>@Html.EditorFor(model => model.Email)</td>
+                <td>@Html.ValidationMessageFor(model => model.Email)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(model => model.ConfirmEmail, new { @class = "control-label col-md-2" })</td>
+                <td>@Html.EditorFor(model => model.ConfirmEmail)</td>
+                <td>@Html.ValidationMessageFor(model => model.ConfirmEmail)</td>
             </tr>
         </table>
-        <hr>
-    </div>
-    <div class="MainDiv">
-        <fieldset>
-            <legend>Modification du Compte Utilisateur</legend>
-            @Html.ValidationSummary(true)
-            @Html.Hidden("Id", HttpContext.Current.User.Identity.Name)
-
-            <table>
-                <tr>
-                    <td>@Html.LabelFor(model => model.NomUtilisateur, new { @class = "control-label col-md-2" })</td>
-                    <td>@Html.EditorFor(model => model.NomUtilisateur)</td>
-                    <td>@Html.ValidationMessageFor(model => model.NomUtilisateur)</td>
-                </tr>
-                <tr>
-                    <td>@Html.LabelFor(model => model.MotDePasse, new { @class = "control-label col-md-2" })</td>
-                    <td>@Html.EditorFor(model => model.MotDePasse)</td>
-                    <td>@Html.ValidationMessageFor(model => model.MotDePasse)</td>
-                </tr>
-                <tr>
-                    <td>@Html.LabelFor(model => model.ConfirmMotDePasse, new { @class = "control-label col-md-2" })</td>
-                    <td>@Html.EditorFor(model => model.ConfirmMotDePasse)</td>
-                    <td>@Html.ValidationMessageFor(model => model.ConfirmMotDePasse)</td>
-                </tr>
-                <tr>
-                    <td>@Html.LabelFor(model => model.NomComplet, new { @class = "control-label col-md-2" })</td>
-                    <td>@Html.EditorFor(model => model.NomComplet)</td>
-                    <td>@Html.ValidationMessageFor(model => model.NomComplet)</td>
-                </tr>
-                <tr>
-                    <td>@Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })</td>
-                    <td>@Html.EditorFor(model => model.Email)</td>
-                    <td>@Html.ValidationMessageFor(model => model.Email)</td>
-                </tr>
-                <tr>
-                    <td>@Html.LabelFor(model => model.ConfirmEmail, new { @class = "control-label col-md-2" })</td>
-                    <td>@Html.EditorFor(model => model.ConfirmEmail)</td>
-                    <td>@Html.ValidationMessageFor(model => model.ConfirmEmail)</td>
-                </tr>
-            </table>
-            <input type="submit" value="Save" class="btn btn-default" />
-    </div>
+        <input type="submit" value="Save" class="btn btn-default" />
     </fieldset>
-</body>
-</html>
+}
