--- a/ForumDImage/ForumDImage/Views/ZoneClients/PublierPhoto.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/PublierPhoto.cshtml
@@ -1,86 +1,52 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
     @model ForumDImage.Models.Photo
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>PublierPhoto</title>
-    <link href="../MasterCSS.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript">
-        function ChargerPreview() {
-            var imageTarget = document.getElementById("preview");
-            var input = document.getElementById("fichier");
-            if (imageTarget != null) {
-                var fReader = new FileReader();
-                fReader.readAsDataURL(input.files[0]);
-                fReader.onloadend = function (event) {
-                    imageTarget.src = event.target.result;
-                }
+<script type="text/javascript">
+    function ChargerPreview() {
+        var imageTarget = document.getElementById("preview");
+        var input = document.getElementById("fichier");
+        if (imageTarget != null) {
+            var fReader = new FileReader();
+            fReader.readAsDataURL(input.files[0]);
+            fReader.onloadend = function (event) {
+                imageTarget.src = event.target.result;
             }
         }
-    </script>
-    <style>
-    .test {
-        color:red
     }
-    </style>
-</head>
-<body>
-    <div class="HeaderDiv">
-        <img src="../Le-Yung-LeL.png" alt="Le Yung Lel Logo" class="MainLogo" /></a>
-        <br>
-        <br>
-        <table class="MainTable">
+</script>
+<label>Preview</label>
+<br />
+<img id="preview" src="" alt="Image d'aperçu'" />
+<br />
+
+@using (Html.BeginForm("PublierPhoto", "ZoneClients", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <fieldset>
+        <legend>Publier une Image</legend>
+        <table>
             <tr>
-                <td>@Html.ActionLink("Index", "Index", "ZoneClients")</td>
-                <td>@Html.ActionLink("Publier une Photo", "PublierPhoto", "ZoneClients")</td>
-                <td>@Html.ActionLink("Modifier le Compte", "ModifierUtilisateur", "ZoneClients")</td>
-                <td>@Html.ActionLink("Login", "Index", "Login")</td>
-                <td>@Html.ActionLink("Inscription", "Index", "Inscription")</td>
+                <td>@Html.LabelFor(model => model.Image)</td>
+                <td><input id="fichier" type="file" accept=".jpg,.png,.gif" name="Image" onchange="ChargerPreview()" /></td>
+                <td>@Html.ValidationMessageFor(model => model.Image)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(model => model.Titre)</td>
+                <td>@Html.TextBoxFor(model => model.Titre)</td>
+                <td>@Html.ValidationMessageFor(model => model.Titre)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(model => model.Commentaire)</td>
+                <td>@Html.TextBoxFor(model => model.Commentaire)</td>
+                <td>@Html.ValidationMessageFor(model => model.Commentaire)</td>
+            </tr>
+            <tr>
+                <td><input type="submit" value="Publier" /></td>
+            </tr>
+            <tr>
+                <td>@ViewBag.Message</td>
             </tr>
         </table>
-        <hr>
-    </div>
-    <div class="MainDiv">
-        <label>Preview</label>
-        <br />
-        <img id="preview" src="nimportequoi" />
-        <br />
-
-        @using (Html.BeginForm("PublierPhoto", "ZoneClients", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-        <fieldset>
-            <legend>Publier une Image</legend>
-            <table>
-                <tr>
-                    <td>@Html.LabelFor(model => model.Image)</td>
-                    <td><input id="fichier" type="file" accept=".jpg,.png,.gif" name="Image" onchange="ChargerPreview()" /></td>
-                    <td>@Html.ValidationMessageFor(model => model.Image)</td>
-                </tr>
-                <tr>
-                    <td>@Html.LabelFor(model => model.Titre, new { id="test", @class = "test" })</td>
-                    <td>@Html.TextBoxFor(model => model.Titre)</td>
-                    <td>@Html.ValidationMessageFor(model => model.Titre)</td>
-                </tr>
-                <tr>
-                    <td>@Html.LabelFor(model => model.Commentaire)</td>
-                    <td>@Html.TextBoxFor(model => model.Commentaire)</td>
-                    <td>@Html.ValidationMessageFor(model => model.Commentaire)</td>
-                </tr>
-                <tr>
-                    <td><input type="submit" value="Publier" /></td>
-                </tr>
-                <tr>
-                    <td>@ViewBag.Message</td>
-                </tr>
-            </table>
-        </fieldset>
-        }
-
-    </div>
-</body>
-</html>
+    </fieldset>
+}
