--- a/ForumDImage/ForumDImage/Views/Inscription/Success.cshtml
+++ b/ForumDImage/ForumDImage/Views/Inscription/Success.cshtml
@@ -4,5 +4,7 @@
 
 }
 
-Bravo, tu as bien été inscrit
-
+<h2>Bravo, tu as bien été inscrit</h2>
+<script type="text/javascript">
+setTimeout(function(){window.location.href='Login.jsp'},3000);
+</script>
