--- a/ForumDImage/ForumDImage/Views/ZoneClients/ModifierUtilisateur.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/ModifierUtilisateur.cshtml
@@ -11,38 +11,42 @@
         @Html.ValidationSummary(true)
         @Html.Hidden("Id", HttpContext.Current.User.Identity.Name)
 
-        <table>
-            <tr>
-                <td>@Html.LabelFor(model => model.NomUtilisateur, new { @class = "control-label col-md-2" })</td>
-                <td>@Html.EditorFor(model => model.NomUtilisateur)</td>
-                <td>@Html.ValidationMessageFor(model => model.NomUtilisateur)</td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.MotDePasse, new { @class = "control-label col-md-2" })</td>
-                <td>@Html.EditorFor(model => model.MotDePasse)</td>
-                <td>@Html.ValidationMessageFor(model => model.MotDePasse)</td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.ConfirmMotDePasse, new { @class = "control-label col-md-2" })</td>
-                <td>@Html.EditorFor(model => model.ConfirmMotDePasse)</td>
-                <td>@Html.ValidationMessageFor(model => model.ConfirmMotDePasse)</td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.NomComplet, new { @class = "control-label col-md-2" })</td>
-                <td>@Html.EditorFor(model => model.NomComplet)</td>
-                <td>@Html.ValidationMessageFor(model => model.NomComplet)</td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })</td>
-                <td>@Html.EditorFor(model => model.Email)</td>
-                <td>@Html.ValidationMessageFor(model => model.Email)</td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.ConfirmEmail, new { @class = "control-label col-md-2" })</td>
-                <td>@Html.EditorFor(model => model.ConfirmEmail)</td>
-                <td>@Html.ValidationMessageFor(model => model.ConfirmEmail)</td>
-            </tr>
-        </table>
-        <input type="submit" value="Save" class="btn btn-default" />
-    </fieldset>
+        <div class="form-group">
+            @Html.LabelFor(model => model.NomUtilisateur, new { @class = "control-label col-md-2" })
+            @Html.TextBoxFor(model => model.NomUtilisateur, new { @class = "form-control", placeholder = "Nom d'utilisateur" })
+            @Html.ValidationMessageFor(model => model.NomUtilisateur)
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.NomComplet, new { @class = "control-label col-md-2" })
+            @Html.TextBoxFor(model => model.NomComplet, new { @class = "form-control", placeholder = "Nom complet" })
+            @Html.ValidationMessageFor(model => model.NomComplet)
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.MotDePasse, new { @class = "control-label col-md-2" })
+            @Html.TextBoxFor(model => model.MotDePasse, new { @class = "form-control", placeholder = "Mot de passe", type = "password" })
+            @Html.ValidationMessageFor(model => model.MotDePasse)
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ConfirmMotDePasse, new { @class = "control-label col-md-2" })
+            @Html.TextBoxFor(model => model.ConfirmMotDePasse, new { @class = "form-control", placeholder = "Confirmation du mot de passe", type = "password" })
+            @Html.ValidationMessageFor(model => model.ConfirmMotDePasse)
+        </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
+            @Html.TextBoxFor(model => model.Email, new { @class = "form-control", placeholder = "Email" })
+            @Html.ValidationMessageFor(model => model.Email)
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ConfirmEmail, new { @class = "control-label col-md-2" })
+            @Html.TextBoxFor(model => model.ConfirmEmail, new { @class = "form-control", placeholder = "Confirmation du email" })
+            @Html.ValidationMessageFor(model => model.ConfirmEmail)
+        </div>
+
+                                <input type="submit" value="Save" class="btn btn-default" />
+</fieldset>
 }
